--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <link rel="manifest" href="/manifest.json">
 
     <!-- See https://goo.gl/qRE0vM -->
-    <meta name="theme-color" content="#252C32">
+    <meta name="theme-color" content="#21292E">
 
     <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -43,7 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <!-- Tile icon for Windows 8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="/images/manifest/icon-144x144.png">
-    <meta name="msapplication-TileColor" content="#252C32">
+    <meta name="msapplication-TileColor" content="#21292E">
     <meta name="msapplication-tap-highlight" content="no">
 
     <script>
@@ -98,8 +98,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       body {
         margin: 0;
         font-family: sans-serif;
-        background-color: #050D1A;
-        color: #DCDCDC;
+        background: #21292E;
+        color: #DDD;
+        line-height: 28px;
       }
     </style>
   </head>
