--- a/src/code-nasa-share.html
+++ b/src/code-nasa-share.html
@@ -16,6 +16,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style include="shared-styles">
       :host {
         display: block;
+        background-color: #000;
+        background-image: url('/images/backgrounds/share.png');
+        background-repeat: no-repeat;
+        background-position: center top;
+        background-size: 100%;
       }
 
       .section {
@@ -27,7 +32,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin: 0 auto;
         content: '';
         width: 100px;
-        border-top: 1px solid #6A6E75;
+        border-top: 1px solid var(--app-accent-color);
       }
 
       @media (min-width: 768px) {
@@ -37,7 +42,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           width: 40%;
           margin: 0 5%;
           text-align: left;
-          border-left: 1px solid #6A6E75;
+          border-left: 1px solid var(--app-accent-color);
           padding-left: 48px;
         }
 
@@ -47,27 +52,29 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    <div class="splash">
-      <h1>Share your Code</h1>
-    </div>
+    <div class="container">
+      <div class="splash">
+        <h1>Share your Code</h1>
+      </div>
 
-    <div class="section">
-      <h2>NASA developers:</h2>
-      <p>
-        Thanks for your interest in sharing your code! If you are a developer employed by NASA or a
-        NASA contractor and have open source code you wish to host on the NASA GitHub repository,
-        email us at <a href="mailto:opensource@lists.nasa.gov">opensource@lists.nasa.gov</a>.
-      </p>
-    </div>
+      <div class="section">
+        <h2>NASA developers:</h2>
+        <p>
+          Thanks for your interest in sharing your code! If you are a developer employed by NASA or a
+          NASA contractor and have open source code you wish to host on the NASA GitHub repository,
+          email us at <a href="mailto:opensource@lists.nasa.gov">opensource@lists.nasa.gov</a>.
+        </p>
+      </div>
 
-    <div class="section">
-      <h2>Non-NASA affiliates:</h2>
-      <p>
-        We encourage
-        your to clone, fork, modify, break, and improve the code that we've released thus far.
-        We're still working out the proper methods to take user contributions to our code and
-        will provide information on how to do so as it develops.
-      </p>    
+      <div class="section">
+        <h2>Non-NASA affiliates:</h2>
+        <p>
+          We encourage
+          your to clone, fork, modify, break, and improve the code that we've released thus far.
+          We're still working out the proper methods to take user contributions to our code and
+          will provide information on how to do so as it develops.
+        </p>    
+      </div>
     </div>
   </template>
 
