--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -17,21 +17,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       h1 {
         font-size: 1.5em;
         font-weight: normal;
-        letter-spacing: 0.25em;
+        letter-spacing: 4px;
       }
 
       h2 {
         font-size: 1em;
-        font-weight: normal;
-        letter-spacing: 0.1em;
       }
 
       h1, h2, p {
-        margin: 2em 0;
+        margin: 24px 0;
       }
 
       a {
         color: #FFF;
+        font-size: 14px;
         font-weight: bold;
         text-decoration: none;
       }
@@ -40,8 +39,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         text-decoration: underline;
       }
 
+      .container {
+        max-width: 960px;
+        margin: 0 auto;
+        padding: 0 24px 48px;
+      }
+
       .splash {
-        margin: 20vw 0;
+        padding: 24vw 0 20vw;
         text-align: center;
         text-transform: uppercase;
       }
@@ -49,6 +54,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       @media (min-width: 768px) {
         h1 {
           font-size: 2em;
+          letter-spacing: 20px;
         }
       }
     </style>
