--- a/src/code-nasa-app.html
+++ b/src/code-nasa-app.html
@@ -153,8 +153,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <app-header reveals threshold="1">
       <button class="menu-button" on-click="_toggleDrawer"></button>
-      <!-- TODO(keanulee): Change image URL. -->
-      <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/e/e5/NASA_logo.svg" alt="NASA Logo">
+      <img class="logo" src="/images/logos/nasa-144.png" alt="NASA Logo">
       <iron-selector class="tabs" selected="[[page]]" attr-for-selected="name">
         <a href="/#/" name="projects">Projects</a>
         <a href="/#/guide" name="guide">Guide</a>
