--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta name="apple-mobile-web-app-title" content="NASA OSS">
 
     <!-- Homescreen icons -->
-    <link rel="apple-touch-icon" href="/images/manifest/icon-48x48.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/manifest/icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="96x96" href="/images/manifest/icon-96x96.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/images/manifest/icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="/images/manifest/icon-192x192.png">
+    <link rel="apple-touch-icon" href="/images/logos/nasa-48.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/images/logos/nasa-72.png">
+    <link rel="apple-touch-icon" sizes="96x96" href="/images/logos/nasa-96.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/images/logos/nasa-144.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="/images/logos/nasa-192.png">
 
     <!-- Tile icon for Windows 8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="/images/manifest/icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/images/logos/nasa-144.png">
     <meta name="msapplication-TileColor" content="#21292E">
     <meta name="msapplication-tap-highlight" content="no">
 
