--- a/src/code-nasa-guide.html
+++ b/src/code-nasa-guide.html
@@ -24,10 +24,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-size: 100%;
       }
 
-      .step {
-        text-align: center;
-      }
-
       .step > .step-image {
         height: 60px;
         background-repeat: no-repeat;
@@ -91,6 +87,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         border-top: 1px solid var(--app-accent-color);
       }
 
+      .step > h2 {
+        text-align: center;
+      }
+
       .horizontal-scroll {
         overflow-y: auto;
       }
@@ -99,7 +99,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         .step {
           position: relative;
           margin: 42px 0;
-          text-align: left;
         }
 
         .step > .step-image {
@@ -172,8 +171,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <h2>4</h2>
         <div class="description">
           <p>
-            <!-- TODO(keanulee): Fix link -->
-            Submit a NAMS request by filling out the <a href="/#/guide">github.com/join</a> using your NASA email address.
+            <!-- TODO(keanulee): Broken link from old infographic -->
+            Submit a NAMS request by filling out the <a href="http://nams.nasa.gov/nams/asset/227756">HQ AGCY NASA GitHub Collaborator Form</a>.
           </p>
         </div>
       </div>
@@ -259,15 +258,37 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <h2>Details</h2>
         <div class="description">
           <p>
-            <!-- TODO(keanulee): Update text -->
-            Software release at NASA is governed by <a href="http://nodis3.gsfc.nasa.gov/displayDir.cfm?t=NPR&amp;c=2210&amp;s=1C">NPR 2210.1C</a>. NPR 2210.1C establishes the roles, responsibilities, and procedures for reporting, reviewing, and releasing software under various conditions, including open source. Every center has a Software Release Authority (SRA). The SRA processes requests for software release and coordinates legal, export control, IT security, 508 compliance, and software engineering standards compliance reviews. Projects hoping to release software should contact their SRA early to discuss their goals and begin the reporting, review, and release process.
+            One initiates the software review process by reporting the software as described in NPR 2210.1C (e.g., submitting a description of the software to be released, the individuals involved in its creation, development timeline, available documentation, and related topics). Depending on center procedures, this information may be captured through the <a href="https://ntr.ndc.nasa.gov/">NASA Technology Reporting System</a> or standard form NF1679. Contact your SRA for the specific procedure used at your center.
           </p>
           <p>
-            Software release at NASA is governed by <a href="http://nodis3.gsfc.nasa.gov/displayDir.cfm?t=NPR&amp;c=2210&amp;s=1C">NPR 2210.1C</a>. NPR 2210.1C establishes the roles, responsibilities, and procedures for reporting, reviewing, and releasing software under various conditions, including open source. Every center has a Software Release Authority (SRA). The SRA processes requests for software release and coordinates legal, export control, IT security, 508 compliance, and software engineering standards compliance reviews. Projects hoping to release software should contact their SRA early to discuss their goals and begin the reporting, review, and release process.
+            Each piece of software is unique, and must be reviewed on a case-by-case basis. Generally speaking, however, the review process will address the following considerations:
           </p>
+          <ul>
+            <li>
+              <b>Legal.</b>
+              It is important to ensure that NASA has appropriate rights in software, including subcomponents, before NASA releases that material outside the agency. Software is rarely developed in isolation. If your project uses external dependencies, you must provide details about such packages or sources when you report your software. (See NPR 2210.1C, Chapter 2 for details on reporting software.) The terms and conditions governing external software impact NASA's right to use and release software, and must be thoroughly analyzed before NASA can release software incorporating that external software. NASA attorneys will also help identify the set of terms and conditions that should govern a particular piece of software when NASA releases it. Per current NASA policy, NASA releases open source software under the NASA Open Source Agreement (NOSA) unless external Open Source Software incorporated into the NASA Open Source Software requires use of a different open source license or unless approved by Center Patent or IP Counsel. Such determinations must be made by your center intellectual property counsel before NASA may release the software in question.
+            </li>
+            <li>
+              <b>Export Control.</b>
+              The Export Administration Regulations (EAR) and the International Traffic in Arms Regulations (ITAR), among other laws and policies, restrict which NASA technology may be publicly disclosed. Software falling within the scope of these laws or policies cannot be released open source, and may be subject to release restrictions. Your local export control staff can help you determine whether export control laws apply to your technology.
+            </li>
+            <li>
+              <b>IT Security.</b>
+              Generally speaking, released software should not contain any information peculiar to NASA, such as user names, passwords, database credentials, IP addresses, host names, firewall and network information, or any other data which would expose or create vulnerabilities. Your SRA and IT Security staff will help you understand the types of risks occasioned by software release, and will work with you to remove elements of your software which may give rise to a vulnerability prior to release.
+            </li>
+            <li>
+              <b>508 Compliance.</b>
+              When developing, procuring, maintaining, or using Electronic and Information Technology (EIT), Federal agencies must ensure that Federal employees with disabilities have access to and use of information and data that is comparable to that for other employees.
+            </li>
+            <li>
+              <b>Software Engineering Requirements.</b>
+              NASA has established formal software engineering requirements in NPR 7150.2A. These requirements govern all software development activities and must be followed throughout a project's development life cycle. As part of the software release process, your center SRA and Engineering Technical Authority for software will work with you to verify (or establish) your software classification and ensure compliance with the corresponding engineering requirements prior to release. For this area of inquiry in particular it is best to front-load compliance by adhering to the software engineering requirements with a documented compliance matrix from the outset. Otherwise, you may incur significant delay and expense in obtaining compliance prior to release.
+            </li>
+          </ul>
           <p>
-            Software release at NASA is governed by <a href="http://nodis3.gsfc.nasa.gov/displayDir.cfm?t=NPR&amp;c=2210&amp;s=1C">NPR 2210.1C</a>. NPR 2210.1C establishes the roles, responsibilities, and procedures for reporting, reviewing, and releasing software under various conditions, including open source. Every center has a Software Release Authority (SRA). The SRA processes requests for software release and coordinates legal, export control, IT security, 508 compliance, and software engineering standards compliance reviews. Projects hoping to release software should contact their SRA early to discuss their goals and begin the reporting, review, and release process.
+            Depending on the number of projects being assessed for release at any given time general workloads and backlogs, traversing the release process can take anywhere from 3 to 6 months. The process may take longer for complex or novel release requests. Be sure to factor these time tables (with consultation with your SRA) into your project schedules.
           </p>
+</div>
         </div>
       </div>
     </div>
