--- a/index.html
+++ b/index.html
@@ -102,9 +102,37 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color: #DDD;
         line-height: 28px;
       }
+
+      footer {
+        padding: 24px;
+        text-align: center;
+      }
+
+      a {
+        color: #FFF;
+        font-size: 14px;
+        font-weight: bold;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
     </style>
   </head>
   <body>
     <code-nasa-app></code-nasa-app>
+
+    <footer>
+      <p>
+        NASA Officials:
+        <a href="mailto:beth.beck@nasa.gov">Beth Beck</a>
+        and
+        <a href="mailto:jason.duley@nasa.gov">Jason Duley</a>
+      </p>
+      <p>
+        <a href="http://open.nasa.gov/">A NASA Open Government Initiative Website</a>
+      </p>
+    </footer>
   </body>
 </html>
