for optimization, use JPEG for backgrounds

--- a/src/code-nasa-guide.html
+++ b/src/code-nasa-guide.html
@@ -17,7 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       :host {
         display: block;
         background-color: #0B1011;
-        background-image: url('/images/backgrounds/guide.png'),
+        background-image: url('/images/backgrounds/guide.jpg'),
                           linear-gradient(0deg, #323D44, transparent 1300px);
         background-repeat: no-repeat;
         background-position: center top, center bottom;
