--- a/src/code-nasa-share.html
+++ b/src/code-nasa-share.html
@@ -17,7 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       :host {
         display: block;
         background-color: #000;
-        background-image: url('/images/backgrounds/share.png');
+        background-image: url('/images/backgrounds/share.jpg');
         background-repeat: no-repeat;
         background-position: center top;
         background-size: 100%;
@@ -73,7 +73,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           your to clone, fork, modify, break, and improve the code that we've released thus far.
           We're still working out the proper methods to take user contributions to our code and
           will provide information on how to do so as it develops.
-        </p>    
+        </p>
       </div>
     </div>
   </template>
