--- a/src/code-nasa-projects.html
+++ b/src/code-nasa-projects.html
@@ -18,7 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       :host {
         display: block;
         background-color: #050D1A;
-        background-image: url('/images/backgrounds/projects.png'),
+        background-image: url('/images/backgrounds/projects.jpg'),
                           linear-gradient(0deg, #323D44, transparent 1300px);
         background-repeat: no-repeat;
         background-position: center top, center bottom;
